--- a/test/Base.lproj/Main.storyboard
+++ b/test/Base.lproj/Main.storyboard
@@ -43,6 +43,10 @@
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="128" id="M4l-M3-JnD"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SYB-Pw-Y4Y">
+                                <rect key="frame" x="120" y="285" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
